2003-10-15 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/blog-category.rb: split language resource.

2003-10-14 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog-style.rb: split language resource.
	* plugin/blog-style_ja.rb: marged to blug-style.rb.
	* README.*: modified using 01sp.rb to select plugins.

2003-10-12 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/blog-category.rb: require 'pstore'.

2003-10-09 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/blog-category.rb: space character after [category name] is omissible.

2003-09-30 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/category.rb, blog-category.rb: move category.rb to blog-category.rb.

2003-09-29 Junichiro Kita <kita@kitaj.no-ip.com>
	* README, README.en: document for category.rb.

2003-09-29 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/*.rb: support category.
	* plugin/category.rb: add.

2003-09-25 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/*.rb: use @conf.shorten

2003-09-10 TADA Tadashi <sho@spc.gr.jp>
	* blog_style.rb: support to getnerate new date in Append mode.
	* tdiary.conf.sample_ja: update referer_table.

2003-08-22 TADA Tadashi <sho@spc.gr.jp>
	* title-navi.rb: show title in the prev/next month.
	* tdiary.conf.sample*: remove comment mail setting.

2003-08-05 TADA Tadashi <sho@spc.gr.jp>
	* remove plugin/edit.rb.
	* release 1.5.5.

2003-05-18 TADA Tadashi <sho@spc.gr.jp>
	* whatsnew-list.rb: call apply_plugin begore shorten.

2003-05-15 TADA Tadashi <sho@spc.gr.jp>
	* release 1.5.4.

2003-05-04 TADA Tadashi <sho@spc.gr.jp>
	* whatsnew-list.rb: no use SERVER_PORT.

2003-05-03 TADA Tadashi <sho@spc.gr.jp>
	* add BlogRD style.

2003-04-25 TADA Tadashi <sho@spc.gr.jp>
	* recent-entry, recent-entry2, whatnew-list: remove 2nd parameter and support @options['apply_plugin'].
	* whatsnew-list: RSS feed support. thanks Kazuhiro NISHIYAMA <zn@mbf.nifty.com>.

2003-04-15 TADA Tadashi <sho@spc.gr.jp>
	* add blog-style_ja.rb plugin for Japanese labels.
	* add tdiary.conf.sample_ja.
