@@ -1,4 +1,4 @@
-# title-navi.rb: navigation label with title of the article. $Revision: 1.6 $
+# title-navi.rb: navigation label with title of the article. $Revision: 1.7 $
 #
 # This plugin run only copy to plugin directory.
 # You can customize in tdiary.conf:
@@ -55,7 +55,7 @@ def navi_prev_diary( date )
 	diary = @diaries[date.strftime( '%Y%m%d' )]
 	if diary and diary.title.length > 0 then
 		len = @options['title_navi.max'] || 30
-		@conf.shorten( DiaryBase.method_defined?(:stripped_title) ? diary.stripped_title : diary.title, len.to_i )
+		@conf.shorten( apply_plugin( DiaryBase.method_defined?(:stripped_title) ? diary.stripped_title : diary.title, true ), len.to_i )
 	else
 		"Prev"
 	end
@@ -65,7 +65,7 @@ def navi_next_diary( date )
 	diary = @diaries[date.strftime( '%Y%m%d' )]
 	if diary and diary.title.length > 0 then
 		len = @options['title_navi.max'] || 30
-		@conf.shorten( DiaryBase.method_defined?(:stripped_title) ? diary.stripped_title : diary.title, len.to_i )
+		@conf.shorten( apply_plugin( DiaryBase.method_defined?(:stripped_title) ? diary.stripped_title : diary.title, true ), len.to_i )
 	else
 		"Next"
 	end
