@@ -1,3 +1,6 @@
+2003-10-24 TADA Tadashi <sho@spc.gr.jp>
+	* plugin/title-navi.rb: apply_plugin support.
+
 2003-10-15 Junichiro Kita <kita@kitaj.no-ip.com>
 	* plugin/blog-category.rb: split language resource.
 
